# personal-chat-slm

./: .gitignore  pyproject.toml  requirements.txt
